feat: Approach 100% test coverage in Reservation
- 중복 좌석 검증: DTO 내부에서 Service로 이전
- model 내 사용하지 않는 함수 삭제(테스트 삭제)
- PaymentRetryEventListener 단위 테스트 추가
  - 필요없는 검증 라인 삭제
  - 수신 이벤트 검증을 위한 예외 추가
- API 통합 테스트 추가 및 단위 테스트 정리
- OrderService 단위 테스트 추가
- ReservationService 리팩토링
  - GAME_MISMATCH 에러 반환을 위한 리팩토링
  - DB조회 1번으로 수정
  - 검증 순서 변경
- 검증 일관성을 위한 fixture 수정
  - TICKET_PRICE로 동일 가격 조회